--- a/Lab0.build_log.htm
+++ b/Lab0.build_log.htm
@@ -3,10 +3,15 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Keil\EE319Kware\Lab0_EE319K\Lab0.uvproj
+C:\Keil\EE319Kware\Lab0_EE319K\EE319K-Lab-0\Lab0.uvproj
 Project File Date:  01/20/2017
 
 <h2>Output:</h2>
+Build target 'Lab0'
+assembling main.s...
+linking...
+Program Size: Code=812 RO-data=0 RW-data=0 ZI-data=1024  
+".\Lab0.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
