--- a/Lab0.build_log.htm
+++ b/Lab0.build_log.htm
@@ -12,6 +12,8 @@ assembling main.s...
 linking...
 Program Size: Code=812 RO-data=0 RW-data=0 ZI-data=1024  
 ".\Lab0.axf" - 0 Error(s), 0 Warning(s).
-</pre>
-</body>
-</html>
+cters at end of line
+main.s(74): warning: A1865W: '#' not seen before constant expression
+main.s(74): error: A1137E: Unexpected characters at end of line
+".\Lab0.axf" - 2 Error(s), 2 Warning(s).
+Target not created
