--- a/Lab0.build_log.htm
+++ b/Lab0.build_log.htm
@@ -7,13 +7,6 @@ C:\Keil\EE319Kware\Lab0_EE319K\EE319K-Lab-0\Lab0.uvproj
 Project File Date:  01/23/2017
 
 <h2>Output:</h2>
-Build target 'Lab0'
-assembling main.s...
-linking...
-Program Size: Code=812 RO-data=0 RW-data=0 ZI-data=1024  
-".\Lab0.axf" - 0 Error(s), 0 Warning(s).
-cters at end of line
-main.s(74): warning: A1865W: '#' not seen before constant expression
-main.s(74): error: A1137E: Unexpected characters at end of line
-".\Lab0.axf" - 2 Error(s), 2 Warning(s).
-Target not created
+</pre>
+</body>
+</html>
